--- a/utils/components/_questionnaire.scss
+++ b/utils/components/_questionnaire.scss
@@ -134,9 +134,14 @@
   flex-direction: column;
   gap: 10px;
   @media screen and (min-width: 321px) {
+    display : flex;
+    flex-direction: column;
+  }
+  @media screen and (min-width: 768px) {
     display: grid;
   grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
+
 
     //display: flex;
     //flex-direction: row;
