--- a/utils/components/_burger.scss
+++ b/utils/components/_burger.scss
@@ -39,13 +39,13 @@
     top: 10px;
   }
   .header-menu {
-    position:fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: aqua;
-    z-index: 11;
+    //position:fixed;
+    //top: 0;
+    //left: 0;
+    //width: 100%;
+    //height: 100%;
+    //background-color: aqua;
+    //z-index: 11;
   }
 
   .header:before {
