--- a/utils/components/_header.scss
+++ b/utils/components/_header.scss
@@ -60,11 +60,14 @@ visibility: hidden;
 
 
 .header-menu {
-  display: flex;
-  align-items: flex-end;
-  height: max-content;
-  @media screen and (max-width: 321px) {
-    display: none;
+  display: none;
+  visibility: hidden;
+  @media screen and (min-width: 321px) {
+    visibility: visible;
+    display: flex;
+    align-items: flex-end;
+    height: max-content;
+    gap: 80px;
   }
 }
 
@@ -83,8 +86,18 @@ visibility: hidden;
 }
 
 
-.header-nav_item {
+.header-nav__item {
   display:flex;
+
+}
+
+.header-nav__item__link{
+  font-family: 'Cormorant Infant', Arial, sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  text-transform: uppercase;
+  color: #195557;
 }
 
 .web_tel {
