--- a/utils/components/_hero.scss
+++ b/utils/components/_hero.scss
@@ -1,3 +1,21 @@
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .hero {
   padding: 7px 0 48px;
   background:  #eaeeef;
@@ -59,8 +77,30 @@
   display: flex;
 }
 
+
 .header-nav_item {
   display: flex;
+}
+
+.header-nav__item__link {
+  margin-left: 10px;
+  position: relative;
+}
+
+.header-nav__item__link:hover{
+  transition: 3s;
+  &:before {
+    content: '';
+    position: absolute ;
+    left: -20px;
+    border: 10px solid transparent;
+    border-top: 10px solid green;
+    transform: rotate(-90deg);
+    //transition: 3s;
+
+    transition-timing-function: steps(4, jump-end);
+    //transition-timing-function: cubic-bezier(0.1, 0.7, 1, 0.1);
+  }
 }
 
 .web_tel {
