--- a/utils/components/_questionnaire.scss
+++ b/utils/components/_questionnaire.scss
@@ -58,7 +58,7 @@
   }
 }
 
-.wrapper-checkbox{
+.wrapper-radio{
   display: flex;
   flex-direction: column;
   gap: 14px;
@@ -112,7 +112,6 @@
   font-weight: 700;
   font-size: 14px;
   line-height: 17px;
-
   color: #70908B;
 }
 
